src/test/ui/parser/issue-22712.stderr
error: expected one of `:`, `;`, `=`, or `@`, found `<`
  --> $DIR/issue-22712.rs:6:12
   |
LL |     let Foo<Vec<u8>>
   |            ^ expected one of `:`, `;`, `=`, or `@` here

error: aborting due to previous error

